--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://remotemysql.com/hgWj7Gqbms?useLegacyDatetimeCode=false&serverTimezone=UTC
-    username: hgWj7Gqbms
-    password: 9Fdrs8NTyH
+    url: jdbc:mysql://localhost:3306/sample?useLegacyDatetimeCode=false&serverTimezone=UTC
+    username: root
+    password: root1234
     driverClassName: com.mysql.cj.jdbc.Driver
 
 mybatis:
